1998-06-06  Yo Ric Dude  <ericmit@ix.netcom.com>

	* samples.c, players.c, clients.c: rigged up the sample freeing
	routines to check reference counts before deleting the samples.

1998-06-06  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.h, esd-server.h: moved some server stuff to esd-server.h.
	also added placeholders for an ADPCM mode, and endian issues.

	* samples.c: tuned the check for sample_id in stop_sample()

	* players.c: set up free_sample as the central player "destructor"

	* mix.c: added integral ratio of sample rates optimization.

1998-06-05  Myth  <frb@umr.edu>
	* esd.h: removed reference to config.h.

	* audio.c: added reference to config.h.

	* Makefile.in,aclocal.m4,config.h.in,configure,COPYING,INSTALL,
	config.guess,config.sub,install-sh,ltconfig,ltmain.sh,missing,
	mkinstalldirs: removed from cvs tree, since they are added by
	aclocal/auto*.

	* autogen.sh,HACKING: readme and script for generating files listed
	above.

1998-05-27  Raja R Harinath  <harinath@cs.umn.edu>

	Nearly working on Solaris.
	* audio_solaris.c (esd_audio_open): Clean up.  Make clear that
	this file only knows about CS4231 devices.

	* configure.in: Add checks for connect, gethostbyname and
	inet_aton. 

	* audio.c, audio_*.c: Arch dependent files define
	ARCH_esd_audio_foo if they contain the function `esd_audio_foo'.
	Otherwise, `audio.c' provides a generic function `esd_audio_foo'.
	(Tested only for solaris.) 

	* Makefile.am: Remove building of library without `libtool'.

1998-05-24  Yo 'Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd.c, esdlib.c: 
	added ability to free and reclaim /dev/dsp for use by other
	programs, without invalidating any sample references within
	the daemon.  sound output is consumed by daemon, and ignored
 	until the daemon is resumed.  created esd_lock() and esd_unlock() 
	functions, to hide the transfer of the auth. key from clients.

	* esdlock.c, esdunlock.c:
	removed from source. functionality superceded by esdctl, called