@@ -1,5 +1,5 @@
 AC_INIT(esd.h)
-AM_INIT_AUTOMAKE(esound, 0.2.1)
+AM_INIT_AUTOMAKE(esound, 0.2.2)
 AM_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
 AM_PROG_LIBTOOL
